[package]
name = "imxrt-async-hal"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["imxrt", "nxp", "embedded", "async"]
categories = ["embedded", "no-std", "asynchronous"]
readme = "README.md"
description = """
Async peripherals for NXP iMX RT processors.
"""

[dependencies]
cortex-m = "0.6"
imxrt-iomuxc = { rev = "14aa29e", git = "https://github.com/imxrt-rs/imxrt-rs" }
imxrt-ral = "0.4"

[target.thumbv7em-none-eabihf.dependencies.cortex-m-rt]
version = "0.6"

[dependencies.futures]
version = "0.3"
default-features = false

[features]
# Peripheral features
gpio = []
gpt = []
i2c = []
pipe = []
pit = []
spi = []
uart = []
# All features on by default
default = ["gpio", "gpt", "i2c", "pipe", "pit", "spi", "uart"]
# Runtime features
rt = ["imxrt-ral/rt", "cortex-m-rt/device"]
# Chip variant features
imxrt101x = ["imxrt-iomuxc/imxrt101x", "imxrt-ral/imxrt1011"]
imxrt106x = ["imxrt-iomuxc/imxrt106x", "imxrt-ral/imxrt1062"]


# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[package.metadata.docs.rs]
features = ["imxrt106x"]
rustdoc-args = ["--cfg", "docsrs"]
