[package]
name = "imxrt-async-hal"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["imxrt", "nxp", "embedded", "async"]
categories = ["embedded", "no-std", "asynchronous"]
readme = "README.md"
description = """
Async peripherals for NXP iMX RT processors.
"""

[dependencies]
cortex-m = "0.6"

[dependencies.imxrt-ccm]
features = ["imxrt-ral"]
git = "https://github.com/imxrt-rs/imxrt-ccm.git"
rev = "0c93478"

[dependencies.imxrt-dma]
git = "https://github.com/imxrt-rs/imxrt-dma"
rev = "a825d22"

[dependencies.imxrt-iomuxc]
version = "0.1"

[dependencies.imxrt-ral]
version = "0.4"

[target.thumbv7em-none-eabihf.dependencies.cortex-m-rt]
version = "0.6"
optional = true

[dependencies.futures]
version = "0.3"
default-features = false

[features]
# Peripheral features
gpio = []
gpt = []
i2c = []
pipe = []
pit = []
spi = []
uart = []
# All features on by default
default = ["gpio", "gpt", "i2c", "pipe", "pit", "spi", "uart"]
# Runtime features
rt = ["imxrt-ral/rt", "cortex-m-rt/device"]
# Chip variant features
imxrt1010 = ["imxrt-iomuxc/imxrt101x", "imxrt-ral/imxrt1011", "imxrt-ccm/imxrt1010"]
imxrt1060 = ["imxrt-iomuxc/imxrt106x", "imxrt-ral/imxrt1062", "imxrt-ccm/imxrt1060"]

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0

[package.metadata.docs.rs]
features = ["imxrt1060"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "thumbv7em-none-eabihf"

[patch.crates-io.imxrt-iomuxc]
git = "https://github.com/imxrt-rs/imxrt-iomuxc"
branch = "v0.1-imxrt101x"
